# Spaced

./: .dockerignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  envoy.yaml  main.go  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: feature.md  user_story.md
.github/_workflows/: ci.yaml  clippy.yaml
.github/workflows/: ci.yaml  clippy.yaml
.sqlx/: query-0bffc94bee8db5bbb43948022924b27e6a34b223862a9ccd53667c597e46cde9.json  query-419f97ce68369ea0e28db9140d65371718a004de260e680a3475be17c68954bb.json  query-61d57b39956ed52c40dc4878bac887bddd0ae282bebd56706f2188d89b8b221e.json  query-6331d8ec2be8c549371f4947c881ab6754ac9fc72c60c04200845e982b71bea9.json  query-a0c117e61568d0a1d1895cce323c7c3c2adcd6e89532023d533a8086b8c4ed61.json  query-d314ad2f0cb976daf7821b5e1cf5981d352305196eeb5c95d5112ab07bd8ff3f.json
app/: .gitignore  index.css  index.html  index.tsx  main.ts
app/components/: App.tsx  Background.tsx  Container.tsx  ContextmenuProvider.tsx  ItemProvider.tsx  SelectionProvider.tsx  ViewportProvider.tsx
app/components/App/: index.tsx
app/components/Overlay/: index.tsx
app/components/Overlay/Contextmenu/: index.tsx
app/components/Overlay/Control/: index.tsx
app/components/Overlay/Search/: index.tsx
app/components/Viewport/: index.tsx
app/lib/: action.ts  draw.ts  test.ts  types.ts  utils.ts  vector.ts
charts/: README.md  deployment.yaml  ingress.yaml
config/: nginx.conf
config/manifests/: README.md  ingress.yaml  item-producer-deployment.yaml  item-producer-service.yaml  reset-local-cluster.sh  user-service-deployment.yaml
diagrams/: C3-architecture.excalidraw  C3-architecture.plantuml
docs/: apis.md  auto_scaling.md  gdpr_checklist.md  monitoring.md  notes.md  requirements.md  research_report.md  service_providers.md
docs/diagrams/: C3-architecture.excalidraw
docs/expirements/100_basic_item_test/: apply_item.sh  basic_item.sql  basic_test.json  basic_test.json.html  basic_test.yaml  basic_test_10_10.json  basic_test_10_10.json.html  basic_test_10_100.json  basic_test_10_100.json.html  basic_test_10_1000.json  basic_test_10_1000.json.html  basic_test_10_1000_1.json  basic_test_10_1000_1.json.html  basic_test_10_1000_think_0.json  basic_test_10_1000_think_0.json.html  notes.md
docs/guides/: local_cluster.md
manifests/: README.md  deployment-item-service.yaml  deployment-user-service.yaml  deployment-web-socket.yaml  service.yaml
migrations/: 20230916145517_item.sql  20230916145518_user.sql  upcoming
proto/: item.proto
scripts/: deploy.sh  start.sh
server/: Cargo.toml
server/src/: main.rs
services/item_producer/: Cargo.toml
services/item_producer/src/: main.rs
srcs/app/: README.md  index.css  index.html  main.ts  package.json  tsconfig.json
srcs/app/components/: App.tsx  AuthProvider.tsx  Background.tsx  ConfigProvider.tsx  Container.tsx  ContextProvider.tsx  CreateButton.tsx  SelectionProvider.tsx  StateProvider.tsx  ViewportProvider.tsx  WebSocketProvider.tsx
srcs/app/lib/: action.ts  types.ts  utils.ts
srcs/bench/: Cargo.toml
srcs/bench/benches/: bench.rs
srcs/cli/: Cargo.toml
srcs/cli/src/: main.rs  service.rs
srcs/e2e/: package.json  playwright.config.ts  tsconfig.json
srcs/e2e/tests/: item.spec.ts  user.spec.ts
srcs/proto/: bounding.proto  item.pb.go  item.proto  utils.pb.go  utils.proto
srcs/services/item_consumer/: .env  Cargo.toml  Dockerfile  build.rs
srcs/services/item_consumer/src/: main.rs
srcs/services/item_producer/: Cargo.toml  Dockerfile  build.rs
srcs/services/item_producer/src/: clients.rs  consumer.rs  handlers.rs  main.rs
srcs/services/item_service/: Cargo.toml  Dockerfile
srcs/services/item_service/src/: handlers.rs  main.rs
srcs/services/kafka_test_multi_consumer/: Cargo.toml
srcs/services/kafka_test_multi_consumer/src/: main.rs
srcs/services/kafka_test_producer/: Cargo.toml
srcs/services/kafka_test_producer/src/: main.rs
srcs/services/rabbitmq_test_consumer/: Cargo.toml
srcs/services/rabbitmq_test_consumer/src/: main.rs
srcs/services/rabbitmq_test_producer/: Cargo.toml
srcs/services/rabbitmq_test_producer/src/: main.rs
srcs/services/search_service/: Cargo.toml
srcs/services/search_service/src/: handlers.rs  main.rs
srcs/services/test/: Cargo.toml
srcs/services/test/src/: main.rs
srcs/services/user/: Cargo.toml
srcs/services/user/src/: handlers.rs  main.rs
srcs/services/user_service/: Cargo.toml  Dockerfile  build.rs
srcs/services/user_service/src/: auth.rs  handlers.rs  main.rs
srcs/services/web_socket/: Cargo.toml  Dockerfile
srcs/services/web_socket/src/: handlers.rs  main.rs
srcs/services/web_socket_copy/: Cargo.toml
srcs/services/web_socket_copy/src/: consumer.rs  handlers.rs  main.rs
srcs/services/web_transport/: Cargo.toml
srcs/services/web_transport/src/: cert.pem  key.pem  main.rs
srcs/tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
srcs/tauri/src/: main.rs
srcs/utils/: Cargo.toml
srcs/utils/src/: lib.rs
tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
tauri/migrations/: 20230916145517_item.sql
tauri/src/: main.rs
