[workspace]
members = [
  "srcs/services/item_producer",
  "srcs/services/item_consumer",
  "srcs/services/web_transport",
  "srcs/services/web_socket",
  "srcs/tauri",
  "srcs/utils",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
repository = "https://github.com/FHICT-S-Koen/Spaced"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
rdkafka = "0.34"
prost = "0.12"
prost-build = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
tonic-build = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utils = { path = "srcs/utils" }
