[workspace]
members = [
  "srcs/services/item_producer",
  # "srcs/services/item_consumer",
  "srcs/services/item_service",
  "srcs/services/rabbitmq_test_consumer",
  "srcs/services/rabbitmq_test_producer",
  "srcs/services/kafka_test_producer",
  "srcs/services/user_service",
  "srcs/tauri",
  "srcs/utils",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
repository = "https://github.com/FHICT-S-Koen/Spaced"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
amqprs = "1"
anyhow = "1"
axum = { version = "0.6" }
axum-extra = { version = "0.8" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
# futures-channel = "0.3.28"
futures-util = "0.3"
jsonwebtoken = "9"
log = "0.4"
once_cell = "1"
prost = "0.12"
prost-build = "0.12"
redis = { version = "0.23.3", features = ["tokio-comp"] }
rdkafka = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
tonic-build = "0.10"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utils = { path = "srcs/utils" }
