[workspace]
members = [
  "srcs/services/item_producer",
  "srcs/tauri",
  "srcs/utils",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
repository = "https://github.com/FHICT-S-Koen/Spaced"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1"
amqprs = "1"
axum = { version = "0.6" }
axum-extra = { version = "0.8" }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9"
once_cell = "1"
prost = "0.12"
prost-build = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utils = { path = "srcs/utils" }
