[package]
name = "utils"
version.workspace = true
description = "Utils"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "utils"
crate-type = ["lib"]

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
