[package]
name = "item_consumer"
version = "0.0.0"
description = "The main producer service used to manage items in real-time."
# repository = { workspace = true }
edition = "2021"
rust-version = "1.70"


# repository = { workspace = true }
# edition = { workspace = true }
# rust-version = { workspace = true }
#
[[bin]]
name = "item_consumer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rdkafka = "0.34.0"
log = { workspace = true }
env_logger = { workspace = true }
