[package]
name = "item_consumer"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "item_consumer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rdkafka.workspace = true
tokio.workspace = true
