[package]
name = "item_consumer"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "item_consumer"
path = "src/main.rs"

[build-dependencies]
prost-build.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rdkafka.workspace = true
prost.workspace = true
sqlx.workspace = true
tokio.workspace = true
