[package]
name = "item_producer"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "item_producer"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
prost.workspace = true
rdkafka.workspace = true
tokio.workspace = true
tonic.workspace = true
