[package]
name = "kafka_test_multi_consumer"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "kafka_test_multi_consumer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
rdkafka.workspace = true
prost.workspace = true
sqlx.workspace = true
tokio.workspace = true
futures-util.workspace = true
