[package]
name = "search_service"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "search_service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
jsonwebtoken.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
axum.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
sqlx.workspace = true
