[package]
name = "user_service"
version.workspace = true
description = "The user service."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "user_service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
jsonwebtoken.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
axum.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
sqlx.workspace = true
argon2 = "0.5"
dotenvy = "0.15.7"
