[package]
name = "web_socket"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "web_socket"
path = "src/main.rs"

[build-dependencies]
prost-build.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
rdkafka.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis = { version = "0.23.3", features = ["tokio-comp"] }
futures = "0.3"
futures-util = { version = "0.3" }
# futures-channel = "0.3.28"
axum = { version = "0.6", features = ["ws"] }
axum-extra = { version = "0.8.0", features = ["protobuf"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
socketioxide = "0.6"
engineioxide = "0.6"
serde_json = "1"
clap = { version = "4", features = ["derive"]}
