[package]
name = "web_socket_copy"
version.workspace = true
description = "The main manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "web_socket_copy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
prost.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-once-cell = "0.5.3"
tracing.workspace = true
tracing-subscriber.workspace = true
# amqprs = { workspace = true, features = ["traces"] }
amqprs.workspace = true
futures.workspace = true
futures-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
socketioxide = { version = "0.7", features=["tracing", "extensions"]}
serde_json.workspace = true
clap.workspace = true
async-trait = "0.1"
