[package]
name = "web_transport"
version.workspace = true
description = "The main producer service used to manage items in real-time."
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "web_transport"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
rdkafka.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wtransport = "0.1.8"
